Close new tab after redirect Closes #5
Also changed the URL to sharepoint instead of using <all_urls>

--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,8 @@
     },
     "permissions": [
         "webRequest",
-        "<all_urls>",
-        "webRequestBlocking"
+        "webRequestBlocking",
+        "tabs",
+        "*://*.sharepoint.com/*"
     ]
 }
