--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "private": true,
     "scripts": {
-        "start": "webpack --watch"
+        "start": "webpack"
     },
     "devDependencies": {
         "@types/chrome": "0.0.83",
