Change logic to work with download detection and mime types instead of url matching closes #11

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -7,9 +7,8 @@
         "scripts": ["background.js"]
     },
     "permissions": [
-        "webRequest",
-        "webRequestBlocking",
         "tabs",
+        "downloads",
         "*://*.sharepoint.com/*"
     ]
 }
