--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
     "private": true,
     "scripts": {
-        "start": "webpack --watch --progress --info-verbosity verbose"
+        "start": "webpack --watch --progress --info-verbosity verbose",
+        "build": "webpack",
+        "zip": "npm run build && ts-node ./scripts/makeChromeZip.ts"
     },
     "devDependencies": {
+        "@types/archiver": "^2.1.3",
         "@types/chrome": "0.0.83",
         "@types/copy-webpack-plugin": "^4.4.4",
         "@types/node": "^11.13.7",
         "@types/webpack": "^4.4.27",
+        "archiver": "^3.0.0",
         "clean-webpack-plugin": "^2.0.1",
         "copy-webpack-plugin": "^5.0.3",
         "ts-loader": "^5.4.3",
