Changed the interception based on the "x-ms-invokeapp" header, instead of only using the mime types of downloads.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -7,8 +7,8 @@
         "scripts": ["background.js"]
     },
     "permissions": [
-        "tabs",
-        "downloads",
+        "webRequest",
+        "webRequestBlocking",
         "*://*.sharepoint.com/*"
     ]
 }
